--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,11 @@
 <h2 id="title">Welcome to Ember</h2>
 
+<div style="width: 640px;">
+    {{#ember-fotorama}}
+        <img src="images/cover-1.jpg">
+        <img src="images/cover-2.jpg">
+        <img src="images/cover-3.jpg">
+    {{/ember-fotorama}}
+</div>
+
 {{outlet}}
